Add sales pitch element and style for all screen size

--- a/index.html
+++ b/index.html
@@ -45,9 +45,24 @@
             </div>
         </nav>
     </header>
+<!-- -----------------------------Home page -------------------------------->
+
+    <div class="container" id="main">
+        <div class="row">
+            <div class="col-6" id="sales-pitch">
+            <h1>Grubby Dog?</h1>
+            <p>We’ll get them clean in a jiffy! With world famous groomers
+            and organic gentle products, we’ll have your fur baby squeeky
+            clean and feeling fresh in no time!
+            </p>
+            <button type="button" class="call-button">Make Appointment</button>
+        </div>
+        <div class="col-6">
+        </div>
+        </div>
+    </div>
 
     <!-- ----------------------------Footer -------------------------------->
-
     <footer>
         <div class="container-fluid" id="footer-row">
             <div class="row">
