Create prices.html and gallery.html templates

--- a/prices.html
+++ b/prices.html
@@ -28,10 +28,10 @@
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
             <!-- I found this bit of code on stackoverflow which helped me understand how to display the active page link. 
                 https://stackoverflow.com/questions/17318170/highlighting-the-current-page-in-a-list-of-links-using-css-html  -->
-                <li class="nav-item current">  
+                <li class="nav-item">  
                     <a class="nav-link " href="index.html"><i class="fas fa-home"></i><span>Home</span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item current">
                     <a class="nav-link" href="prices.html"><i class="fas fa-paw"></i><span>Prices</span></a>
                 </li>
                 <li class="nav-item">
@@ -39,23 +39,20 @@
                     <a class="nav-link" href="gallery.html"><i class="fas fa-camera"></i><span>Gallery</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-phone"></i><span>Contact</span></a>
+                    <a class="nav-link" href="contact.html"><i class="fas fa-phone"></i><span>Contact</span></a>
                 </li>
             </ul>
             </div>
         </nav>
     </header>
-<!-- -----------------------------Home page -------------------------------->
+<!-- -----------------------------Prices page -------------------------------->
 
     <div class="container" id="main">
         <div class="row">
             <div class="col-6" id="sales-pitch">
-            <h1>Grubby Dog?</h1>
-            <p>We’ll get them clean in a jiffy! With world famous groomers
-            and organic gentle products, we’ll have your fur baby squeeky
-            clean and feeling fresh in no time!
+            <h1>Prices and Services</h1>
+            <p>Services and prices go here
             </p>
-            <i class="fas fa-shower"></i><button type="button" class="call-button">Make Appointment</button><i class="fas fa-cut"></i>
         </div>
         <div class="col-6">
         </div>
