Add price text field and style

--- a/prices.html
+++ b/prices.html
@@ -11,6 +11,7 @@
 <title>DoggyStyle</title>
 </head>
 <body>
+<div class="parallax">
     <header>
 
     <!--------------------------------- Navbar - Bootstrap ------------------->
@@ -47,12 +48,112 @@
     </header>
 <!-- -----------------------------Prices page -------------------------------->
 
-    <div class="container" id="main">
+    <div class="container-fluid" id="main">
         <div class="row">
-            <div class="col-6" id="sales-pitch">
+            <div class="col text-field" id="prices-banner">
             <h1>Prices and Services</h1>
-            <p>Services and prices go here
-            </p>
+                <hr>
+                <div class="row">
+                    <div class="col breed">
+                            Airedale Terrier <br>
+                            Akita<br>
+                            Basset Hound<br>
+                            Beagle<br>
+                            Bernmese<br>
+                            Bichon Frise<br>
+                            Border Collie<br>
+                            Border Terier<br>
+                            Boxer <br>
+                            Bulldog  <br>
+                            Bullmastiff  <br>
+                            Cairn Terrier <br>
+                            King Charles <br>
+                            Cavachon <br>
+                            Cavapoo <br>
+                            </div>
+                    <div class="col price">
+                        €70 <br>
+                        €80 <br>
+                        €45 <br>
+                        €45 <br>
+                        €100 <br>
+                        €55 <br>
+                        €55 <br>
+                        €50 <br>
+                        €45 <br>
+                        €40 <br>
+                        €55 <br>
+                        €50 <br>
+                        €50 <br>
+                        €50 <br>
+                        €50 <br>
+                        </div>
+                    <div class="col breed">
+                        Cocker Spaniel<br>
+                        Cockerpoo <br>
+                        Collie Rough<br>
+                        Chihuahua Lng<br>
+                        Chihuahua Shrt<br>
+                        Corgi <br>
+                        Dalmatian  <br>
+                        Dachshund Shrt<br>
+                        Dachshund Long<br>
+                        Doberman Pin.<br>
+                        Dogue de Bor.<br>
+                        Fox Terrier <br>
+                        French Bulldog <br>
+                        Germ. Shep. Lng <br>
+                </div>
+                    <div class="col price">
+                        €60 <br>
+                        €65 <br>
+                        €70 <br>
+                        €45 <br>
+                        €35 <br>
+                        €50 <br>
+                        €45 <br>
+                        €35 <br>
+                        €50 <br>
+                        €50 <br>
+                        €55 <br>
+                        €40 <br>
+                        €60 <br>
+                        €35 <br>
+                    </div>
+                    <div class="col breed">
+                        Havanese<br>
+                        Irish Wolfhound<br>
+                        Gld Retriever <br>
+                        Germ. Shep shrt<br>
+                        Great Dane<br>
+                        Greyhound<br>
+                        Jack Russell<br>
+                        Kerry Blue<br>
+                        Labrador<br>
+                        Labradoodle Sm<br>
+                        Labradoodle Md<br>
+                        Labradoodle Lrg<br>
+                        Lhasa Apso<br>
+                        Malamutes<br>
+                     </div>
+                    <div class="col price">
+                        €50<br>
+                        €75<br>
+                        €65<br>
+                        €60<br>
+                        €55<br>
+                        €45<br>
+                        €35<br>
+                        €60<br>
+                        €55<br>
+                        €65<br>
+                        €75<br>
+                        €85<br>
+                        €50<br>
+                        €100<br>
+                    </div>
+                </div>   
+        </div>
         </div>
         <div class="col-6">
         </div>
@@ -82,6 +183,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</div>
 </body>
 </html>
 
