--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <title>DoggyStyle</title>
 </head>
 <body>
+<div class="parallax">
     <header>
-
     <!--------------------------------- Navbar - Bootstrap ------------------->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand ml-auto" href="#"></a>
@@ -49,7 +49,7 @@
 
     <div class="container" id="main">
         <div class="row">
-            <div class="col-6" id="sales-pitch">
+            <div class="col-6 text-field" id="main-banner">
             <h1>Grubby Dog?</h1>
             <p>We’ll get them clean in a jiffy! With world famous groomers
             and organic gentle products, we’ll have your fur baby squeeky
@@ -85,6 +85,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</div>
 </body>
 </html>
 
