Fix - grid system sizing issue and negative margin pulling text off screen

--- a/prices.html
+++ b/prices.html
@@ -51,112 +51,60 @@
     <div class="container-fluid" id="main">
         <div class="row">
             <div class="col text-field" id="prices-banner">
-            <h1>Prices and Services</h1>
+            <h1>Prices</h1>
                 <hr>
                 <div class="row">
-                    <div class="col breed">
-                            Airedale Terrier <br>
-                            Akita<br>
-                            Basset Hound<br>
-                            Beagle<br>
-                            Bernmese<br>
-                            Bichon Frise<br>
-                            Border Collie<br>
-                            Border Terier<br>
-                            Boxer <br>
-                            Bulldog  <br>
-                            Bullmastiff  <br>
-                            Cairn Terrier <br>
-                            King Charles <br>
-                            Cavachon <br>
-                            Cavapoo <br>
-                            </div>
-                    <div class="col price">
-                        €70 <br>
-                        €80 <br>
-                        €45 <br>
-                        €45 <br>
-                        €100 <br>
-                        €55 <br>
-                        €55 <br>
-                        €50 <br>
-                        €45 <br>
-                        €40 <br>
-                        €55 <br>
-                        €50 <br>
-                        €50 <br>
-                        €50 <br>
-                        €50 <br>
-                        </div>
-                    <div class="col breed">
-                        Cocker Spaniel<br>
-                        Cockerpoo <br>
-                        Collie Rough<br>
-                        Chihuahua Lng<br>
-                        Chihuahua Shrt<br>
-                        Corgi <br>
-                        Dalmatian  <br>
-                        Dachshund Shrt<br>
-                        Dachshund Long<br>
-                        Doberman Pin.<br>
-                        Dogue de Bor.<br>
-                        Fox Terrier <br>
-                        French Bulldog <br>
-                        Germ. Shep. Lng <br>
+                    <div class="price col-lg-4 col-md-6">
+                            Airedale Terrier €70<br>
+                            Akita  €80<br>
+                            Basset Hound €45<br>
+                            Beagle €45<br>
+                            Bernmese €100<br>
+                            Bichon Frise €55<br>
+                            Border Collie €55<br>
+                            Border Terier €50<br>
+                            Boxer €45<br>
+                            Bulldog €40<br>
+                            Bullmastiff  €55<br>
+                            Cairn Terrier €50<br>
+                            King Charles €50<br>
+                            Cavachon €50<br>
+                            Cavapoo €50<br>
+                    </div>
+                    <div class="price col-lg-4 col-md-6">
+                        Cocker Spaniel €60<br>
+                        Cockerpoo €65<br>
+                        Collie Rough €70<br>
+                        Chihuahua Lng €45<br>
+                        Chihuahua Shrt €35<br>
+                        Corgi €50<br>
+                        Dalmatian €45<br>
+                        Dachshund Shrt €35<br>
+                        Dachshund Long €50<br>
+                        Doberman Pin. €50<br>
+                        Dogue de Bor. €55<br>
+                        Fox Terrier €40<br>
+                        French Bulldog €60<br>
+                        Germ. Shep. Lng €35<br>
+                    </div>
+                    <div class="price col-lg-4 col-md-6">
+                        Havanese €50<br>
+                        Irish Wolfhound €75<br>
+                        Gld Retriever €65<br>
+                        Germ. Shep shrt €60<br>
+                        Great Dane €55<br>
+                        Greyhound €45<br>
+                        Jack Russell €35<br>
+                        Kerry Blue €60<br>
+                        Labrador €55<br>
+                        Labradoodle Sm €65<br>
+                        Labradoodle Md €70<br>
+                        Labradoodle Lrg €85<br>
+                        Lhasa Apso €50<br>
+                        Malamutes €100<br>
+                    </div>
                 </div>
-                    <div class="col price">
-                        €60 <br>
-                        €65 <br>
-                        €70 <br>
-                        €45 <br>
-                        €35 <br>
-                        €50 <br>
-                        €45 <br>
-                        €35 <br>
-                        €50 <br>
-                        €50 <br>
-                        €55 <br>
-                        €40 <br>
-                        €60 <br>
-                        €35 <br>
-                    </div>
-                    <div class="col breed">
-                        Havanese<br>
-                        Irish Wolfhound<br>
-                        Gld Retriever <br>
-                        Germ. Shep shrt<br>
-                        Great Dane<br>
-                        Greyhound<br>
-                        Jack Russell<br>
-                        Kerry Blue<br>
-                        Labrador<br>
-                        Labradoodle Sm<br>
-                        Labradoodle Md<br>
-                        Labradoodle Lrg<br>
-                        Lhasa Apso<br>
-                        Malamutes<br>
-                     </div>
-                    <div class="col price">
-                        €50<br>
-                        €75<br>
-                        €65<br>
-                        €60<br>
-                        €55<br>
-                        €45<br>
-                        €35<br>
-                        €60<br>
-                        €55<br>
-                        €65<br>
-                        €75<br>
-                        €85<br>
-                        €50<br>
-                        €100<br>
-                    </div>
-                </div>   
-        </div>
-        </div>
-        <div class="col-6">
-        </div>
+            </div>
         </div>
     </div>
 
