Add photo to main page and style

--- a/index.html
+++ b/index.html
@@ -49,16 +49,18 @@
 
     <div class="container" id="main">
         <div class="row">
-            <div class="col-6 text-field" id="main-banner">
+            <div class="text-field" id="main-banner">
             <h1>Grubby Dog?</h1>
-            <p>We’ll get them clean in a jiffy! With world famous groomers
+            <p>We’ll get them clean in a jiffy! Wi
+            th world famous groomers
             and organic gentle products, we’ll have your fur baby squeeky
             clean and feeling fresh in no time!
             </p>
             <i class="fas fa-shower"></i><button type="button" class="call-button">Make Appointment</button><i class="fas fa-cut"></i>
-        </div>
-        <div class="col-6">
-        </div>
+            </div>
+            <div id="dogwash">
+                <img src="../../assets/images/dogwash.png">
+            </div>
         </div>
     </div>
 
