Fix column bug, remove bootstrap and add column-count media queries and ordered lists

--- a/prices.html
+++ b/prices.html
@@ -49,59 +49,54 @@
 <!-- -----------------------------Prices page -------------------------------->
 
     <div class="container-fluid" id="main">
-        <div class="row">
-            <div class="col text-field" id="prices-banner">
-            <h1>Prices</h1>
-                <hr>
                 <div class="row">
-                    <div class="price col-lg-4 col-md-6">
-                            Airedale Terrier €70<br>
-                            Akita  €80<br>
-                            Basset Hound €45<br>
-                            Beagle €45<br>
-                            Bernmese €100<br>
-                            Bichon Frise €55<br>
-                            Border Collie €55<br>
-                            Border Terier €50<br>
-                            Boxer €45<br>
-                            Bulldog €40<br>
-                            Bullmastiff  €55<br>
-                            Cairn Terrier €50<br>
-                            King Charles €50<br>
-                            Cavachon €50<br>
-                            Cavapoo €50<br>
-                    </div>
-                    <div class="price col-lg-4 col-md-6">
-                        Cocker Spaniel €60<br>
-                        Cockerpoo €65<br>
-                        Collie Rough €70<br>
-                        Chihuahua Lng €45<br>
-                        Chihuahua Shrt €35<br>
-                        Corgi €50<br>
-                        Dalmatian €45<br>
-                        Dachshund Shrt €35<br>
-                        Dachshund Long €50<br>
-                        Doberman Pin. €50<br>
-                        Dogue de Bor. €55<br>
-                        Fox Terrier €40<br>
-                        French Bulldog €60<br>
-                        Germ. Shep. Lng €35<br>
-                    </div>
-                    <div class="price col-lg-4 col-md-6">
-                        Havanese €50<br>
-                        Irish Wolfhound €75<br>
-                        Gld Retriever €65<br>
-                        Germ. Shep shrt €60<br>
-                        Great Dane €55<br>
-                        Greyhound €45<br>
-                        Jack Russell €35<br>
-                        Kerry Blue €60<br>
-                        Labrador €55<br>
-                        Labradoodle Sm €65<br>
-                        Labradoodle Md €70<br>
-                        Labradoodle Lrg €85<br>
-                        Lhasa Apso €50<br>
-                        Malamutes €100<br>
+                    <div class="list-unstyled" id="prices-banner">
+                        <ol>
+                            <li>    Airedale Terrier 	€70 	</li>
+                            <li>	Akita from 	€80 	</li>
+                            <li>	Basset Hound 	€45 	</li>
+                            <li>	Beagle 	€45 	</li>
+                            <li>	Bernese Mountain Dog	€100 	</li>
+                            <li>	Bichon Frise  	€55 	</li>
+                            <li>	Border Collie 	€55 	</li>
+                            <li>	Border Terier 	€50 	</li>
+                            <li>	Boxer 	€45 	</li>
+                            <li>	Bulldog  	€40 	<li>
+                            <li>	Bullmastiff  	€55 	</li>
+                            <li>	Cairn Terrier 	€50 	</li>
+                            <li>	Cavalier King Charles 	€50 	</li>
+                            <li>	Cavachon 	€50 	</li>
+                            <li>	Cavapoo 	€50 	</li>
+                            <li>	Cocker Spaniel 	€60 	</li>
+                            <li>	Cockerpoo 	€65 	</li>
+                            <li>	Collie Rough from 	€70 	</li>
+                            <li>	Chihuahua – Long coat 	€45 	</li>
+                            <li>	Chihuahua – Short coat 	€35 	</li>
+                            <li>	Corgi 	€50 	</li>
+                            <li>	Dalmatian  	€45 	</li>
+                            <li>	Dachshund Smooth 	€35 	</li>
+                            <li>	Dachshund Long Hair 	€50 	</li>
+                            <li>	Doberman Pinscher 	€50 	</li>
+                            <li>	Dogue de Bordeaux 	€55 	</li>
+                            <li>	Fox Terrier – Smooth  	€40 	</li>
+                            <li>	Fox Terrier – Wire	€60 	</li>
+                            <li>	French Bulldog	€35 	</li>
+                            <li>	German Shepherd – Long 	€70 	</li>
+                            <li>	Havanese	€50 	</li>
+                            <li>	Irish Wolfhound 	€75 	</li>
+                            <li>	Golden Retriever 	€65 	</li>
+                            <li>	German Shep shrt	€60 	</li>
+                            <li>	Great Dane 	€55 	</li>
+                            <li>	Greyhound  	€45 	</li>
+                            <li>	Jack Russell 	€35 	</li>
+                            <li>	Kerry Blue	€60 	</li>
+                            <li>	Labrador  	€55 	</li>
+                            <li>	Labradoodle Sm 	€65 	</li>
+                            <li>	Labradoodle Md	€75 	</li>
+                            <li>	Labradoodle Lrg	€85 	</li>
+                            <li>	Lhasa Apso 	€50 	</li>
+                            <li>	Malamutes	€100 	</li>    
+                        </ol>  
                     </div>
                 </div>
             </div>
