Add img to prices page and style for all screens

--- a/prices.html
+++ b/prices.html
@@ -49,6 +49,7 @@
 <!-- -----------------------------Prices page -------------------------------->
 
     <div class="container-fluid" id="main">
+            <img src="assets/images/pricesbone.png">
                 <div class="row">
                     <div class="list-unstyled" id="prices-banner">
                         <ol>
