Bug: price banner not aligning center, initially hidden by devtools, fix with l/r marg. auto

--- a/prices.html
+++ b/prices.html
@@ -48,7 +48,7 @@
     </header>
 <!-- -----------------------------Prices page -------------------------------->
 
-    <div class="container-fluid" id="main">
+    <div class="container-fluid" id="main-prices">
             <img src="assets/images/pricesbone.png">
                 <div class="row">
                     <div class="list-unstyled" id="prices-banner">
