--- a/index.html
+++ b/index.html
@@ -47,14 +47,13 @@
     </header>
 <!-- -----------------------------Home page -------------------------------->
 
-    <div class="container" id="main">
+    <div class="container" id="main-home">
         <div class="row">
             <div class="text-field" id="main-banner">
             <h1>Grubby Dog?</h1>
-            <p>We’ll get them clean in a jiffy! Wi
-            th world famous groomers
-            and organic gentle products, we’ll have your fur baby squeeky
-            clean and feeling fresh in no time!
+            <p>We’ll get them clean in a jiffy! Leave your fur baby with us for 
+            the ultimate doggy day spa experience. Guaranteed to leave with a 
+            wagging tail.
             </p>
             <i class="fas fa-shower"></i><button type="button" class="call-button">Make Appointment</button><i class="fas fa-cut"></i>
             </div>
