--- a/contact.html
+++ b/contact.html
@@ -47,8 +47,28 @@
         </nav>
     </header>
 <!-- -----------------------------Contact page -------------------------------->
+  <div class="form-container">
+  <form action="doggystyle.ie">
 
-   
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
+
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Your last name.." required>
+
+    <label for="phone">Phone number</label>
+    <input type="tel" id="phone" name="phone" required>
+
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" required>
+
+    <label for="comment">Comment</label>
+    <textarea id="comment" name="comment" placeholder="Tell us something about your fur baby..." style="height:200px"></textarea>
+
+    <input type="submit" value="Send">
+
+  </form>
+</div>
 
     <!-- ----------------------------Footer -------------------------------->
     <footer>
